--- a/src/sass/components/_hero-slider.scss
+++ b/src/sass/components/_hero-slider.scss
@@ -118,7 +118,7 @@
             }
 
             img {
-                height: 100vh;
+                height: 100%;
                 position: absolute;
                 bottom: 0;
                 right: 0;
